--- a/task/task050/css/new.css
+++ b/task/task050/css/new.css
@@ -68,6 +68,7 @@
       .contenair #new #new-date #date-ipt label input {
         width: 228px; }
       .contenair #new #new-date #date-ipt #getdate {
+        display: none;
         position: absolute;
         left: 112px;
         width: 230px;
