--- a/task/task050/css/new.scss
+++ b/task/task050/css/new.scss
@@ -105,6 +105,7 @@
             -moz-box-sizing: border-box;
             box-sizing: border-box;
           }
+          display: none;
           position: absolute;
           left: 112px;
           width: 230px;
