--- a/task/task050/css/new.scss
+++ b/task/task050/css/new.scss
@@ -29,22 +29,55 @@
       .question{
         height:auto;
         padding: 10px;
+        .to-top{
+          cursor: pointer;
+        }
+        .to-bottom{
+          cursor: pointer;
+        }
+        .to-copy{
+          cursor: pointer;
+        }
+        .to-del{
+          cursor: pointer;
+        }
         &:hover{
           background: #FBEFE4;
+          input{
+            background: #FBEFE4;
+          }
         }
         header{
           span{
             font-size: 1.1em;
             margin-left: 10px;
+            input{
+              border:none;
+            }
+          }
+          span:nth-of-type(3){
+            float: right;
           }
         }
         section{
+          &>label{
+            padding-left:40px;
+            textarea{
+              width:500px;
+              height: 200px;
+              margin: 16px 0;
+            }
+          }
           ul{
             list-style: none;
             li{
               label{
                 input{
                   margin:0 10px;
+                  border:none;
+                }
+                input:nth-of-type(2){
+                  width:60%;
                 }
               }
             }
