--- a/task/task050/css/new.css
+++ b/task/task050/css/new.css
@@ -21,6 +21,12 @@
   .contenair #new #question {
     height: auto;
     margin-top: 20px; }
+    .contenair #new #question .question1 {
+      display: none; }
+    .contenair #new #question .question2 {
+      display: none; }
+    .contenair #new #question .question3 {
+      display: none; }
     .contenair #new #question .question {
       height: auto;
       padding: 10px; }
@@ -67,14 +73,16 @@
     line-height: 50px;
     border-bottom: 2px solid #ccc;
     padding: 30px 0; }
-    .contenair #new #new-question #questionclass span {
-      display: inline-block;
-      background: #dedede;
-      width: 100px;
-      height: 40px;
-      margin: 10px;
-      line-height: 40px;
-      cursor: pointer; }
+    .contenair #new #new-question #questionclass {
+      display: none; }
+      .contenair #new #new-question #questionclass span {
+        display: inline-block;
+        background: #dedede;
+        width: 100px;
+        height: 40px;
+        margin: 10px;
+        line-height: 40px;
+        cursor: pointer; }
     .contenair #new #new-question #addquestion {
       width: 100%;
       height: 50px;
