--- a/task/task050/css/new.scss
+++ b/task/task050/css/new.scss
@@ -26,6 +26,12 @@
     #question{
       height:auto;
       margin-top: 20px;
+      .question1{
+        display: none;}
+      .question2{
+        display: none;}
+      .question3{
+        display: none;}
       .question{
         height:auto;
         padding: 10px;
@@ -100,6 +106,7 @@
       border-bottom: 2px solid #ccc;
       padding:30px 0;
       #questionclass{
+        display: none;
         span{
           display: inline-block;
           background: #dedede;
